--- a/index.html
+++ b/index.html
@@ -7,5 +7,37 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <!-- <div class="logo"> -->
+      <!-- <img src="" alt=""> -->
+      <!-- </div> -->
+      <h1>LUNA</h1>
+
+      <ul class="contact">
+        <li>
+          <a href="#" target="_blank">E-mail</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Instagram</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Notion</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">GitHub</a>
+        </li>
+      </ul>
+    </header>
+
+    <main class="main">
+      <ul class="filter">
+        <li><a href="">전체보기</a></li>
+        <li><a href="">홀수보기</a></li>
+        <li><a href="">짝수보기</a></li>
+        <li><a href="">타이포그래피</a></li>
+        <li><a href="">상세페이지</a></li>
+      </ul>
+    </main>
+  </body>
 </html>
